k8s/venomous-ia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${K8S_SERVICE}
  namespace: ${K8S_NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: ${K8S_DEPLOYMENT}
  ports:
    - name: http
      port: 80
      targetPort: 3000
